Fixed navigating methods + curtains overlap

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100%;
   position: fixed;
+  top: 0px;
   background-color: #e9e9e9;
   z-index: 9999999;
   display: block;
